# frappe-mcp

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  default.conf  frappe-mcp-example.conf  mcp_client.py
.github/: setenv.sh
.github/workflows/: deploy.yml  test.yml
frappe_docs/: frappe_permission_system.md  index.md
frappe_docs/api/: database_api.md  python_api_utils.md  rest_api.md
frappe_docs/auth/: frappe_auth_system.md
frappe_docs/doctypes/: creating_doctypes.md  doctype_naming.md  field_types.md
frappe_docs/report/: Frppe Report Development Guide.md
frappe_docs/scheduler/: hooks_scheduler_background_job.md
frappe_docs/troubleshooting/: not_in_developer_mode.md
frappe_docs/tutorial/: bulk_processing.md  complete_guide_to_hook.md  custom_buttons.md  custom_page.md  custom_pages.md  custom_web_page.md  custom_web_page_in_www.md  getting_started.md
frappe_docs/ui/: frappe_table_component.md  frapppe_dialog.md
src/: analyze.rs  config.rs  fileutil.rs  lib.rs  macros.rs  main.rs  refs_finder.rs  serdeutil.rs  server.rs  shellutil.rs  stringutil.rs
src/functools/: analyze_links.rs  bench_execute.rs  create_custom_page.rs  create_doctype.rs  create_doctype_template.rs  create_report.rs  create_report_template.rs  create_test_template.rs  create_web_page.rs  find_field_usage.rs  find_symbols.rs  get_doctype.rs  get_doctype_db_schema.rs  get_field_usage.rs  get_function_signature.rs  list_doctypes.rs  mod.rs  run_bench_command.rs  run_bench_execute.rs  run_tests.rs  (+3 more)
test_data/: branch.json  sample_code.py
tests/: test_search_frappe_docs.rs
