[package]
authors = ["Robin Syihab <robin@syihab.st>"]
description = "A Model Context Protocol server to help AI ai with Frappe app development"
edition = "2018"
name = "frappe_mcp"
version = "0.0.10"

[lib]
name = "frappe_mcp"
path = "src/lib.rs"

[dependencies]

clap = { version = "4.0.13", features = ["derive"] }
dotenv = "0.15.0"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
walkdir = "2.5.0"
anyhow = "1.0.99"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", version = "0.6.3", features = [
  "server",
  "transport-io",
  "macros",
] }
regex = "1.11.1"
tracing = "0.1.41"
axum = "0.8.4"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
fuzzy-matcher = "0.3.7"
rust-embed = "8.5"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
